# AutoType

./: .gitignore  AutoType.spec  README.md  build.sh  pyproject.toml
.github/workflows/: release.yml
scripts/: make_icon.py
src/autotype/: main.py
