[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autotype"
version = "0.1.0"
description = "Auto-typer tray app for macOS"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.7",
    "loguru>=0.7.3",
]


[project.scripts]
autotype = "autotype.main:main"

[dependency-groups]
dev = ["pyinstaller>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/autotype"]
